# ffmpeg-demo

./: .gitignore  IMPROVEMENTS.md  LIBPNG_BUILD_FIX.md  LIBPNG_FIX_SUMMARY.md  MEDIA_INFO_FEATURE.md  README.md  SYNC_IMPROVEMENT_DETAILS.md  settings.gradle
PermissionX/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/android/widget/: CustomHorizontalScrollView.java  MyEdgeEffect.java  MyHorizontalScrollView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
libffplayer/: .gitignore  ARCHITECTURE.md  analyze_兼容性.md  build.gradle
libffplayer/src/main/cpp/: CMakeLists.txt  jwfflib.version  jwfflib_dummy.c  jwplayer.version  native-lib.cpp
libffplayer/src/main/cpp/base/: AVPacketQueue.cpp  AVPacketQueue.h
libffplayer/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  COMMENTS_SUMMARY.md  VideoDecoder.cpp  VideoDecoder.h
libffplayer/src/main/cpp/filter/: FFFilter.cpp  FFFilter.h
libffplayer/src/main/cpp/main/: FFMpegPlayer.cpp  FFMpegPlayer.h  MediaClock.cpp  MediaClock.h
libffplayer/src/main/cpp/reader/: FFMediaProbe.cpp  FFMediaProbe.h  FFReader.cpp  FFReader.h  FFVideoReader.cpp  FFVideoReader.h
libffplayer/src/main/cpp/settings/: CompileSettings.h
libffplayer/src/main/cpp/utils/: FFConverter.h  FFMpegUtils.cpp  ImageDef.h  MutexObj.cpp  MutexObj.h  TraceUtils.h
libffplayer/src/main/cpp/writer/: FFVideoWriter.cpp  FFVideoWriter.h
libpng/: build.gradle
libpng/src/main/cpp/: CMakeLists.txt
libraries/SmartTabLayout/: build.gradle  proguard-rules.pro
libraries/SmartTabLayout/src/main/: AndroidManifest.xml
libraries/SmartTabLayout/src/main/res/layout/: vip_tab_view.xml
libraries/SmartTabLayout/src/main/res/values/: attrs.xml  ids.xml  strings.xml
libraries/imageselector/: build.gradle
libraries/imageselector/src/main/: AndroidManifest.xml
libraries/imageselector/src/main/res/drawable/: select_round_bg_compose.xml  select_video_during_bg.xml  text_color_selector_a.xml
libraries/imageselector/src/main/res/layout/: activity_clip_image.xml  activity_image_select.xml  activity_preview.xml  adapter_camera.xml  adapter_folder.xml  adapter_folder_old.xml  adapter_images_item.xml  adapter_pager_item.xml  adapter_select_item.xml
libraries/imageselector/src/main/res/values/: attr.xml  strings.xml
libraries/imageselector/src/main/res/values-en/: strings.xml
librariesOld/PermissionX/src/main/: AndroidManifest.xml
librender/src/main/res/layout/: activity_render_test.xml
(+67 files in other folders)
